--- a/_posts/2017-02-14-python项目搭建.md
+++ b/_posts/2017-02-14-python项目搭建.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "python项目搭建"
-description: 
+description: Python是著名的“龟叔”Guido van Rossum在1989年圣诞节期间，为了打发无聊的圣诞节而编写的一个编程语言。现在，全世界差不多有600多种编程语言，但流行的编程语言也就那么20来种。
 width: large
 date:   2017-02-14 11:51:47 +0530
 categories: jekyll update
